--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     />
   </head>
   <body class="text-sm">
+    <!-- Make sure your app container has this structure -->
     <div id="app-container" class="h-screen w-screen flex">
       <!-- Activity Bar -->
       <div
@@ -123,19 +124,29 @@
       <div class="resizer" id="resizer-left"></div>
 
       <!-- Main Content Area (Editor & Output) -->
-      <div id="main-content" class="main-content flex-grow flex flex-col">
-        <div class="editor-pane flex-2">
-          <textarea id="code-editor-area"></textarea>
-        </div>
-        <div
-          class="output-pane flex-1 bg-[var(--panel-bg)] border-t border-[var(--border-color)] p-2 flex gap-2"
-          style="height: 40%"
-        >
-          <div id="turtle-canvas" class="w-2/3 h-full bg-white"></div>
+      <div class="content-area flex-1 flex flex-col">
+        <!-- Top part: Code editor -->
+        <div class="editor-pane border-b border-gray-700">
           <div
-            id="terminal"
-            class="w-1/3 h-full bg-[#1e1e1e] p-2 overflow-y-auto font-mono text-xs whitespace-pre-wrap"
-          ></div>
+            class="editor-toolbar bg-gray-800 p-2 flex justify-between items-center"
+          >
+            <!-- Editor toolbar content -->
+          </div>
+          <div class="editor-container flex-grow">
+            <textarea id="code-editor-area"></textarea>
+          </div>
+        </div>
+
+        <!-- The resize handle will be inserted here by JavaScript -->
+
+        <!-- Bottom part: Output (canvas + terminal) -->
+        <div class="output-pane flex flex-col">
+          <div class="canvas-container flex-1 bg-white">
+            <div id="turtle-container"></div>
+          </div>
+          <div class="terminal-container h-24 bg-gray-900 overflow-y-auto p-2">
+            <pre id="terminal" class="text-gray-300 text-xs font-mono"></pre>
+          </div>
         </div>
       </div>
 
@@ -204,9 +215,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.1/mode/python/python.min.js"></script>
 
     <!-- Link to your custom JS file -->
-    <script src="js/script.js"></script>
+    <script type="module" src="js/script.js"></script>
 
-    <!-- For future Azure OpenAI API integration -->
-    <!-- <script type="module" src="vibe-app/src/azureOpenAI.js"></script> -->
+    <!-- Azure OpenAI integration -->
+    <script type="module" src="vibe-app/src/azureOpenAI.js"></script>
   </body>
 </html>
