--- a/index.html
+++ b/index.html
@@ -131,6 +131,21 @@
             class="editor-toolbar bg-gray-800 p-2 flex justify-between items-center"
           >
             <!-- Editor toolbar content -->
+            <span class="text-sm text-gray-300 font-medium">Python Editor</span>
+            <div class="flex gap-2">
+              <button
+                id="run-btn"
+                class="px-4 py-1 bg-green-600 text-white font-semibold rounded text-xs hover:bg-green-700"
+              >
+                ▶ Run
+              </button>
+              <button
+                id="reset-btn"
+                class="px-4 py-1 bg-red-600 text-white font-semibold rounded text-xs hover:bg-red-700"
+              >
+                ⟲ Reset
+              </button>
+            </div>
           </div>
           <div class="editor-container flex-grow">
             <textarea id="code-editor-area"></textarea>
@@ -190,18 +205,6 @@
               class="w-full px-4 py-1 bg-[var(--blue-accent)] text-white font-semibold rounded text-xs hover:bg-opacity-80"
             >
               Send
-            </button>
-            <button
-              id="run-btn"
-              class="w-1/2 px-4 py-1 bg-green-600 text-white font-semibold rounded text-xs hover:bg-green-700"
-            >
-              Run
-            </button>
-            <button
-              id="reset-btn"
-              class="w-1/2 px-4 py-1 bg-red-600 text-white font-semibold rounded text-xs hover:bg-red-700"
-            >
-              Reset
             </button>
           </div>
         </div>
