fix github page issue

--- a/index-github-pages.html
+++ b/index-github-pages.html
@@ -13,6 +13,7 @@
         environment: "github-pages",
       };
     </script>
+    <script src="github-pages-config.js"></script>
 
     <!-- Tailwind CSS for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
