--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <!-- Left Sidebar (Tutorial) -->
       <div
         id="left-sidebar"
-        class="sidebar bg-[var(--sidebar-bg)] w-64 p-4 flex flex-col flex-shrink-0"
+        class="left-sidebar bg-[var(--sidebar-bg)] w-80 p-4 flex flex-col flex-shrink-0 border-r border-[var(--border-color)]"
       >
         <h2 class="font-bold text-xs uppercase tracking-wider mb-4">
           Tutorial
@@ -121,12 +121,13 @@
         </div>
       </div>
 
-      <div class="resizer" id="resizer-left"></div>
+      <!-- Left horizontal resizer -->
+      <div class="resizer horizontal-resize-handle" id="resizer-left"></div>
 
       <!-- Main Content Area (Editor & Output) -->
-      <div class="content-area flex-1 flex flex-col">
+      <div id="main-content" class="content-area flex-1 flex flex-col">
         <!-- Top part: Code editor -->
-        <div class="editor-pane border-b border-gray-700">
+        <div id="editor-pane" class="editor-pane">
           <div
             class="editor-toolbar bg-gray-800 p-2 flex justify-between items-center"
           >
@@ -152,10 +153,14 @@
           </div>
         </div>
 
-        <!-- The resize handle will be inserted here by JavaScript -->
+        <!-- Vertical resize handle between editor and output -->
+        <div
+          class="resize-handle vertical-resize-handle"
+          id="vertical-resizer"
+        ></div>
 
         <!-- Bottom part: Output (canvas + terminal) -->
-        <div class="output-pane flex flex-col">
+        <div id="output-pane" class="output-pane">
           <div class="canvas-container flex-1 bg-white">
             <div id="turtle-container"></div>
           </div>
@@ -165,7 +170,8 @@
         </div>
       </div>
 
-      <div class="resizer" id="resizer-right"></div>
+      <!-- Right horizontal resizer -->
+      <div class="resizer horizontal-resize-handle" id="resizer-right"></div>
 
       <!-- Right Sidebar (AI Chat) -->
       <div
