UI fix and modular css files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Link to your custom CSS file -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/main.css" />
 
     <!-- Fonts -->
     <link
