ui fix for markdown response

--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
             id="ai-mode-select"
             class="bg-[#3c3c3c] border border-transparent rounded p-1 text-xs"
           >
-            <option value="vibecoding" selected>Vibecoding</option>
-            <option value="reflective">Reflective</option>
+            <option value="vibecoding">Vibecoding</option>
+            <option value="reflective" selected>Reflective</option>
           </select>
         </div>
         <div
