change names to assistants A&B

--- a/index.html
+++ b/index.html
@@ -178,16 +178,14 @@
         id="right-sidebar"
         class="right-sidebar bg-[var(--sidebar-bg)] w-80 p-4 flex flex-col flex-shrink-0 border-l border-[var(--border-color)]"
       >
-        <div class="flex justify-between items-center mb-2">
-          <h2 class="font-bold text-xs uppercase tracking-wider">
-            AI Assistant
-          </h2>
+        <div class="mb-2">
+          <label class="block text-xs font-semibold mb-1">AI Assistant</label>
           <select
             id="ai-mode-select"
-            class="bg-[#3c3c3c] border border-transparent rounded p-1 text-xs"
+            class="bg-[#3c3c3c] border border-transparent rounded p-1 text-xs w-full"
           >
-            <option value="vibecoding">Vibecoding</option>
-            <option value="reflective" selected>Reflective</option>
+            <option value="assistant-a">Assistant A</option>
+            <option value="assistant-b">Assistant B</option>
           </select>
         </div>
         <div
