added draft steps

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
           </div>
         </div>
 
-        <!-- Quick Actions - Always Visible -->
+        <!-- Quick Actions - Always Visible
         <div class="quick-actions bg-gray-800 p-3 rounded-lg mb-3">
           <div class="flex gap-2 mb-2">
             <button
@@ -248,7 +248,7 @@
               📋 Overview
             </button>
           </div>
-        </div>
+        </div> -->
 
         <!-- Collapsible Sections -->
         <div class="expandable-sections flex-grow">
@@ -278,7 +278,7 @@
               id="toggle-all-steps"
               class="w-full text-left bg-gray-700 p-2 rounded text-xs font-semibold text-gray-300 hover:bg-gray-600 flex items-center justify-between"
             >
-              <span>📋 All Steps (${currentStepIndex + 1}/${totalSteps})</span>
+              <span>📋 All Steps</span>
               <span id="steps-toggle-icon">▼</span>
             </button>
             <div
