--- a/index-github-pages.html
+++ b/index-github-pages.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VIBE - AI Programming Assistant Experiment</title>
 
-    <!-- Use relative paths that work on GitHub Pages -->
-    <link rel="stylesheet" href="./css/style.css" />
+    <!-- FIX: Use the correct CSS file -->
+    <link rel="stylesheet" href="./css/main.css" />
 
     <!-- Fonts -->
     <link
@@ -54,18 +54,43 @@
     <!-- GitHub Pages specific scripts - load after main content -->
     <script type="module">
       // Test backend connection and show status
-      if (window.BACKEND_URL) {
-        fetch(`${window.BACKEND_URL}/health`)
-          .then((response) => response.json())
+      if (
+        window.BACKEND_URL &&
+        window.BACKEND_URL !== "BACKEND_URL_PLACEHOLDER"
+      ) {
+        console.log("Testing backend connection to:", window.BACKEND_URL);
+
+        // Test the health endpoint
+        fetch(`${window.BACKEND_URL}/api/health`)
+          .then((response) => {
+            if (!response.ok) {
+              throw new Error(
+                `HTTP ${response.status}: ${response.statusText}`
+              );
+            }
+            return response.json();
+          })
           .then((data) => {
+            console.log("✅ Backend health check successful:", data);
             document.getElementById("backend-status").textContent =
               "✅ Backend Connected";
           })
           .catch((error) => {
+            console.error("❌ Backend health check failed:", error);
             document.getElementById("backend-status").textContent =
               "❌ Backend Offline";
-            console.error("Backend test failed:", error);
+
+            // Show more detailed error info
+            const notice = document.getElementById("github-pages-notice");
+            notice.innerHTML = `
+              🚀 Running on GitHub Pages - Backend powered by Azure |
+              <span style="color: #ff6b6b;">❌ Backend connection failed: ${error.message}</span>
+            `;
           });
+      } else {
+        console.error("❌ Backend URL not configured");
+        document.getElementById("backend-status").textContent =
+          "❌ Config Missing";
       }
     </script>
   </body>
