remove legacy codes

--- a/index.html
+++ b/index.html
@@ -432,6 +432,6 @@
     <script type="module" src="js/script.js"></script>
 
     <!-- Azure OpenAI integration -->
-    <script type="module" src="vibe-app/src/azureOpenAI.js"></script>
+    <!-- <script type="module" src="vibe-app/src/azureOpenAI.js"></script> -->
   </body>
 </html>
