--- a/index.html
+++ b/index.html
@@ -311,9 +311,16 @@
           </div>
           <button
             id="mark-complete-btn"
-            class="w-full px-3 py-2 bg-green-600 text-white font-semibold rounded text-xs hover:bg-green-700 disabled:opacity-50"
+            class="w-full px-3 py-2 bg-green-600 text-white font-semibold rounded text-xs hover:bg-green-700 disabled:opacity-50 mb-2"
           >
             ✅ Mark Task Complete
+          </button>
+          <!-- ADD THIS BUTTON -->
+          <button
+            id="save-log-btn"
+            class="w-full px-3 py-2 bg-purple-600 text-white font-semibold rounded text-xs hover:bg-purple-700"
+          >
+            💾 Save Progress Log
           </button>
         </div>
       </div>
