remove debug message

--- a/index-github-pages.html
+++ b/index-github-pages.html
@@ -42,14 +42,14 @@
     </script>
   </head>
   <body class="text-sm">
-    <!-- GitHub Pages Notice -->
+    <!-- GitHub Pages Notice
     <div
       id="github-pages-notice"
       class="bg-blue-600 text-white text-center py-2 text-xs"
     >
       🚀 Running on GitHub Pages - Backend powered by Azure |
       <span id="backend-status">Testing connection...</span>
-    </div>
+    </div> -->
 
     <!-- Rest of your existing HTML content from index.html -->
     <!-- This content will be inserted by the GitHub Actions workflow -->
