--- a/index.html
+++ b/index.html
@@ -426,6 +426,77 @@
       </div>
     </div>
 
+    <!-- Post-Task Survey Modal -->
+    <div id="survey-modal" class="modal-overlay" style="display: none">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2 class="modal-title">📝 Task Completed - Quick Survey</h2>
+        </div>
+
+        <div class="modal-body">
+          <div class="intro-section">
+            <h3>🎉 Great Job!</h3>
+            <p>
+              You've successfully completed
+              <strong id="completed-task-name">Task 1</strong>! Before moving on
+              to the next task, please take a few minutes to fill out a brief
+              survey about your experience.
+            </p>
+          </div>
+
+          <div class="survey-section">
+            <h3>📋 Survey Information</h3>
+            <div class="note-item">
+              <strong>📝 Survey Link:</strong> Please click the button below to
+              open the survey in a new tab.
+            </div>
+            <div class="note-item">
+              <strong>⏱️ Duration:</strong> This should take approximately 3-5
+              minutes to complete.
+            </div>
+            <div class="note-item">
+              <strong>🔍 Survey Content:</strong> Questions about task
+              difficulty, AI assistant experience, and code comprehension.
+            </div>
+          </div>
+
+          <div class="survey-link-section">
+            <div
+              class="bg-blue-900 bg-opacity-30 border border-blue-500 p-4 rounded-lg text-center"
+            >
+              <p class="text-blue-300 mb-3 text-sm">
+                Click the button below to open the survey:
+              </p>
+              <a
+                id="survey-link-btn"
+                href="#"
+                target="_blank"
+                class="inline-block px-6 py-3 bg-blue-600 text-white font-semibold rounded-lg text-sm hover:bg-blue-700 transition-all duration-200"
+              >
+                🔗 Open Post-Task Survey
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="modal-footer">
+          <div class="footer-note">
+            <p>
+              <em>
+                ✅ Once you've completed the survey, click "Continue" below to
+                proceed to the next task.
+              </em>
+            </p>
+          </div>
+          <div class="footer-buttons">
+            <button id="continue-after-survey-btn" class="btn-primary">
+              ✅ I've Completed the Survey - Continue
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- External Libraries -->
     <script src="js/skulpt/skulpt.min.js"></script>
     <script src="js/skulpt/skulpt-stdlib.js"></script>
