--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             <div
               id="tips-content"
               class="mt-1 px-2 py-1 text-xs text-gray-300"
-              style="display: none"
+              style="display: block"
             >
               <div id="current-tips">
                 <!-- Tips populated by JavaScript -->
