--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
               <span class="mr-2">📝</span>
               <span class="task-title-text">Draw a Square</span>
             </h3>
-            <p id="task-description" class="text-xs text-gray-300 line-clamp-2">
+            <p id="task-description" class="text-xs text-gray-300">
               Learn the fundamentals of turtle graphics by creating your first
               geometric shape.
             </p>
