improved editor interaction

--- a/index.html
+++ b/index.html
@@ -494,6 +494,7 @@
     <script src="js/skulpt/skulpt-stdlib.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.1/codemirror.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.1/mode/python/python.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.1/addon/comment/comment.min.js"></script>
 
     <!-- Link to your custom JS file -->
     <script type="module" src="js/script.js"></script>
