prepare for extension to ignorantSchoolmaster assistant

--- a/index.html
+++ b/index.html
@@ -383,6 +383,10 @@
               >
                 <option value="vibecoding">Assistant A</option>
                 <option value="reflective">Assistant B</option>
+                <!-- Assistant C hidden for current experiment -->
+                <!-- <option value="ignorant-schoolmaster">
+                  Assistant C (Explorer)
+                </option> -->
               </select>
             </div>
           </div>
